--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://user:pass@cluster0.hhmhh.mongodb.net/?retryWrites=true&w=majority
-MONGODB_DATABASE=api
-MONGODB_COLLECTION=users
+MONGODB_URI=mongodb+srv://esilian14:davidjauja12@cluster0.ytzwnrq.mongodb.net/?retryWrites=true&w=majority
+MONGODB_DATABASE=product
+MONGODB_COLLECTION=products
